# procedural-fair-hr-decisions

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
data/: CHECKSUMS.md  README.md
figures/: README.md
results/: README.md
results/audit/: audit.csv
results/mitigation/: pareto.csv
results/procedural/: per_group_tpr.csv  procedural.csv  significance.csv
results/shap/: oulad_cross_arch.csv  shap_results.csv  shap_summary.md
scripts/: _plot_style.py  _procedural_significance_helpers.py  compute_pareto.py  download_data.sh  figs_eqodds_per_dataset.py  figs_lit_gap_matrix.py  figs_lit_research_landscape.py  figs_method_architecture.py  figs_method_inference.py  figs_method_mitigation.py  figs_method_multiclass.py  figs_method_pipeline.py  figs_method_procedural.py  figs_method_taxonomy.py  figs_mitigation.py  figs_procedural.py  figs_shap.py  figs_shap_cross_arch.py  make_figures.py  run_audit.py  run_mitigation.py  run_procedural.py  run_procedural_significance.py  run_shap.py  verify_checksums.py
src/procedural_fair_hr/: __init__.py  data_loaders.py  fairness_metrics.py  procedural_fairness.py  visualisation.py
src/procedural_fair_hr/mitigation/: __init__.py  _adv_debias_pytorch.py  base.py  inprocessing.py  ovr_wrapper.py  postprocessing.py  preprocessing.py
tests/: test_adv_debias_pytorch.py  test_audit.py  test_compute_pareto.py  test_data_loaders.py  test_fairness_metrics.py  test_mitigation.py  test_mitigation_base.py  test_mitigation_postprocessing.py  test_mitigation_preprocessing.py  test_ovr_wrapper.py  test_procedural.py  test_procedural_fairness.py  test_procedural_significance.py  test_shap.py  test_visualisation.py
